# cuSignm

./: CMakeLists.txt  README.md  checkcuda.h  cusignm.h  cusignm_frobenius.h  cusignm_halley.cu  cusignm_newton.cu  cusignm_traits.h  example_cusignm_cHalley.cu  example_cusignm_dHalley.cu  example_cusignm_dNewton.cu  example_cusignm_sHalley.cu  example_cusignm_sNewton.cu  example_cusignm_zHalley.cu  example_cusignm_zNewton.cu
